; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_patch_generate.c_git_patch_from_blobs.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_patch_generate.c_git_patch_from_blobs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_patch_from_blobs(i32** %0, i32* %1, i8* %2, i32* %3, i8* %4, i32* %5) #0 {
  %7 = alloca i32**, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i32** %0, i32*** %7, align 8
  store i32* %1, i32** %8, align 8
  store i8* %2, i8** %9, align 8
  store i32* %3, i32** %10, align 8
  store i8* %4, i8** %11, align 8
  store i32* %5, i32** %12, align 8
  %15 = load i32*, i32** %8, align 8
  %16 = load i8*, i8** %9, align 8
  %17 = call i32 @GIT_DIFF_FILE_CONTENT_SRC__BLOB(i32* %15, i8* %16)
  store i32 %17, i32* %13, align 4
  %18 = load i32*, i32** %10, align 8
  %19 = load i8*, i8** %11, align 8
  %20 = call i32 @GIT_DIFF_FILE_CONTENT_SRC__BLOB(i32* %18, i8* %19)
  store i32 %20, i32* %14, align 4
  %21 = load i32**, i32*** %7, align 8
  %22 = load i32*, i32** %12, align 8
  %23 = call i32 @patch_from_sources(i32** %21, i32* %13, i32* %14, i32* %22)
  ret i32 %23
}

declare dso_local i32 @GIT_DIFF_FILE_CONTENT_SRC__BLOB(i32*, i8*) #1

declare dso_local i32 @patch_from_sources(i32**, i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
